<resources>
    <string name="app_name">건국대학교 부스트</string>
    <string name="app_name_eng">konkuk boost</string>
    <string name="app_name_boost_eng">boost</string>
    <string name="prompt_username">포탈 아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_cur_password">현재 비밀번호</string>
    <string name="prompt_password_check">비밀번호 확인</string>
    <string name="prompt_log_in">로그인</string>
    <string name="prompt_more">더보기</string>
    <string name="prompt_graduation_simulation">졸업시뮬레이션</string>
    <string name="prompt_classification">이수구분</string>
    <string name="prompt_standard_grade">기준학점</string>
    <string name="prompt_acquired_grade">취득학점</string>
    <string name="prompt_rest_grade">잔여학점</string>
    <string name="prompt_logout">로그아웃</string>
    <string name="prompt_overall_semester_grades">전체학기성적</string>
    <string name="prompt_current_semester_grades">금학기성적</string>
    <string name="prompt_chart_no_data">데이터 가져오는 중…</string>
    <string name="prompt_no_network">네트워크 연결 상태 확인 후 다시 실행하세요.</string>
    <string name="prompt_no_network_alert">네트워크 미연결 상태입니다.</string>
    <string name="prompt_opensource_title">오픈소스 라이선스</string>
    <string name="prompt_subject_name">과목명</string>
    <string name="prompt_subject_number">학수번호</string>
    <string name="prompt_subject_id">과목번호</string>
    <string name="prompt_dept">학과</string>
    <string name="prompt_professor">담당교수</string>
    <string name="prompt_grade">학점</string>
    <string name="prompt_std_no">학번</string>
    <string name="prompt_name">이름</string>
    <string name="prompt_character_grade">성적</string>
    <string name="prompt_evaluation_method">성적평가방식</string>
    <string name="prompt_opensource_license">오픈소스 라이선스</string>
    <string name="prompt_grade_no_data">성적이 없습니다</string>
    <string name="question_current_grades">금학기 성적을 저장하시겠습니까?</string>
    <string name="question_total_grades">전체 학기 성적을 저장하시겠습니까?</string>
    <string name="question_graduation_simulation">졸업시뮬레이션을 저장하시겠습니까?</string>
    <string name="question_grades">해당학기 성적을 저장하시겠습니까?</string>
    <string name="prompt_save">저장되었습니다.</string>
    <string name="prompt_yes">예</string>
    <string name="prompt_no">아니오</string>
    <string name="prompt_total">전체</string>
    <string name="prompt_major">전공</string>
    <string name="prompt_info_classification">이수구분 변경 과목은 졸업 시뮬레이션에만 적용됩니다.</string>
    <string name="prompt_syllabus">강의계획서</string>
    <string name="hint_syllabus">과목번호, 학과, 과목, 교수</string>
    <string name="prompt_mobile_qr_code">모바일 열람증</string>
    <string name="prompt_my_information">나의 정보</string>
    <string name="prompt_share_kakao_link">카카오톡 공유하기</string>
    <string name="prompt_search_course">과목 검색</string>
    <string name="prompt_interested_course">관심 과목</string>
    <string name="prompt_choose_semester">학기를 선택하세요.</string>
    <string name="prompt_no_syllabus">해당 학기의 강의계획서가 준비되지 않았습니다.</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_tellNo">연락처</string>
    <string name="prompt_consulting_time">상담시간</string>
    <string name="prompt_book">교재</string>
    <string name="prompt_work">과제</string>
    <string name="prompt_week_plan">주별강의계획</string>
    <string name="kakao_app_key">eaa087d23730b3150d1cfa52f6ec2413</string>
    <string name="kakao_scheme">kakaoeaa087d23730b3150d1cfa52f6ec2413</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="prompt_grade_1">1학년</string>
    <string name="prompt_grade_2">2학년</string>
    <string name="prompt_grade_3">3학년</string>
    <string name="prompt_grade_4">4학년</string>
    <string name="course_info_with_emoji">❤  수강바구니담은인원\n💛  수강인원\n💚  제한인원</string>
    <string name="prompt_info">도움말</string>
    <string name="prompt_settings">설정</string>
    <string name="prompt_auth_info_detail">학력 조회</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_certificate_of_acquired">취득학점확인원</string>
    <string name="prompt_change_password">비밀번호 변경</string>
    <string name="prompt_confirm">확인</string>
    <string name="prompt_belong">소속</string>
    <string name="prompt_my_info">내 정보</string>
    <string name="prompt_state">학적상태</string>
    <string name="prompt_elective_status">선택교양이수현황</string>
    <string name="prompt_basic_elective">기교</string>
    <string name="prompt_core_elective">핵교</string>
    <string name="prompt_advanced_elective">심교</string>
</resources>