<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.konkuk.boost.viewmodels.SettingsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/oval"
                        android:backgroundTint="@color/primaryTextColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:text="김인애"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/userDept"
                        app:layout_constraintStart_toEndOf="@id/userImage"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userDept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:text="공과대학 컴퓨터공학부"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/userImage"
                        app:layout_constraintTop_toBottomOf="@id/userNameTextView" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/showUserInfoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/primary_outline_theme_background"
                android:padding="5dp"
                android:text="학력 조회"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/shareKaKaoLinkBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/prompt_share_kakao_link"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/showOpenSourceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/prompt_opensource_license"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/prompt_logout"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>